Add operations Results CGET,GET and update corresponding openapi
